--- a/css/style.css
+++ b/css/style.css
@@ -129,7 +129,12 @@ body {
   }
 }
 /* =============================================== */
+.page__section {
+  padding-top: 110px;
+  padding-bottom: 110px;
+}
 .main-block {
+  padding-top: 0;
 }
 .main-block__container {
   position: relative;
@@ -203,7 +208,6 @@ body {
   z-index: 2;
   display: flex;
   margin-right: -188px;
-  height: 86px;
   background-color: #ffffff;
   box-shadow: 0px 100px 80px rgba(0, 0, 0, 0.03),
     0px 64.8148px 46.8519px rgba(0, 0, 0, 0.0227778),
@@ -217,6 +221,7 @@ body {
   flex: 1 1 auto;
   padding: 5px 15px 5px 74px;
   width: 100%;
+  height: 86px;
   font-weight: 400;
   font-size: 20px;
   line-height: 1.35;
@@ -341,6 +346,13 @@ body {
   }
 }
 @media screen and (max-width: 991.98px) {
+  .page__section {
+    padding-top: 80px;
+    padding-bottom: 80px;
+  }
+  .main-block {
+    padding-top: 0;
+  }
   .body-main-block {
     display: block;
     margin-bottom: 30px;
@@ -368,7 +380,14 @@ body {
     justify-content: center;
   }
 }
-@media screen and (max-width: 616.98px) {
+@media screen and (max-width: 767.98px) {
+  .page__section {
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
+  .main-block {
+    padding-top: 0;
+  }
   .main-block__container {
     padding-top: 130px;
   }
@@ -389,24 +408,33 @@ body {
     flex-direction: column;
   }
   .form-main-block__input {
-    padding: 5px 15px 5px 74px;
+    height: 70px;
   }
   .form-main-block__button {
     flex: 0 0 auto;
+    height: 70px;
   }
   .form-main-block__icon {
-    top: 35%;
+    top: 25%;
   }
   .body-main-block__arrows {
     bottom: 10px;
     right: 10px;
     gap: 50px;
-
   }
   .body-main-block__arrow.swiper-button-prev,
   .body-main-block__arrow.swiper-button-next {
     position: static;
     width: 17px;
     height: 30px;
+  }
+  @media screen and (max-width: 372.98px) {
+    .form-main-block__input {
+      padding-left: 20px;
+      text-align: center;
+    }
+    .form-main-block__icon {
+      display: none;
+    }
   }
 }
